fix: remove useless 'overflow hidden' from previous layout

--- a/stylus/objects/layouts.styl
+++ b/stylus/objects/layouts.styl
@@ -76,6 +76,7 @@ $app-2panes-sticky
     main,
     main > [role=contentinfo]
         height auto
+        overflow visible
 
     +medium-screen()
         display block
